Kubernetes_Practical_tasks/7.Ingresses/T1/aqua.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqua-svc
spec:
  type: ClusterIP
  selector:
    color: aqua
  ports:
    - port: 80
      targetPort: 80
