Kubernetes_Practical_tasks/7.Ingresses/T1/maroon.yaml
apiVersion: v1
kind: Service
metadata:
  name: maroon-svc
spec:
  type: ClusterIP
  selector:
    color: maroon
  ports:
    - port: 80
      targetPort: 80
