Kubernetes_Practical_tasks/7.Ingresses/T1/olive.yaml
apiVersion: v1
kind: Service
metadata:
  name: olive-svc
spec:
  type: ClusterIP
  selector:
    color: olive
  ports:
    - port: 80
      targetPort: 80
