Kubernetes_Practical_tasks/7.Ingresses/T1/maroon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maroon-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: maroon.k8slab.net
      http:
        paths:
          - backend:
              service:
                name: maroon-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
